--- a/ChangeLog.txt
+++ b/ChangeLog.txt
@@ -3,6 +3,11 @@
 - Update API DescribeNisInspectionReportCheckItems: add response parameters Body.CheckItemList.$.RecommendationList.$.SuggestionCode.
 
 
+2025-04-18 Version: 2.0.5
+- Update API DescribeNisInspectionReportCheckItems: add response parameters Body.CheckItemList.$.RecommendationList.$.ReasonCode.
+- Update API DescribeNisInspectionReportCheckItems: add response parameters Body.CheckItemList.$.RecommendationList.$.SuggestionCode.
+
+
 2024-08-26 Version: 2.0.4
 - Generated cpp 2021-12-16 for nis.
 
